[gd_scene load_steps=12 format=3 uid="uid://gcdb2uber21y"]

[ext_resource type="Script" uid="uid://doeehpo3o4fy5" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Script" path="res://character_body_2d.gd" id="2_hqtel"]
[ext_resource type="Texture2D" uid="uid://dudd4cxuw8tow" path="res://sprites/RunFila.png" id="3_1jxqw"]
[ext_resource type="Texture2D" uid="uid://bkwaamyxgvkl7" path="res://sprites/QuietoFila.png" id="4_dw050"]
[ext_resource type="Texture2D" uid="uid://cq1as5cwya0dh" path="res://sprites/JumpFila.png" id="5_sweqy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hqtel"]
radius = 8.0
height = 20.0

[sub_resource type="Animation" id="Animation_nvl01"]
resource_name = "correr"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RunSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.210335, 0.529344, 0.767724, 1, 1.22696, 1.54597, 1.81239, 1.9925, 2.20852, 2.39782, 2.66074, 2.83953, 2.98676),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 12, 13, 14, 16, 17, 17]
}

[sub_resource type="Animation" id="Animation_b26j0"]
resource_name = "quieto"
length = 3.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.234875, 0.44521, 0.701118, 0.897431, 1.12179, 1.28305, 1.47235, 1.67217, 1.91756, 2.15243, 2.40133, 2.65023, 2.89912, 3.06667, 3.23333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2, 3, 3, 2, 3, 2, 4, 5, 6, 7, 8, 7, 8]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "jump"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JumpSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.433333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_1jxqw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JumpSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_urp6f"]
_data = {
&"RESET": SubResource("Animation_1jxqw"),
&"idle": SubResource("Animation_b26j0"),
&"jump": SubResource("Animation_2hs0m"),
&"run": SubResource("Animation_nvl01")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_i3pqv")

[node name="CharacterBody2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_hqtel")
script = ExtResource("2_hqtel")

[node name="RunSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 7.45058e-09)
scale = Vector2(0.464778, 0.361842)
texture = ExtResource("3_1jxqw")
hframes = 18
frame = 1

[node name="IdleSprite2D" type="Sprite2D" parent="."]
position = Vector2(0.176108, 0)
scale = Vector2(0.482389, 0.361842)
texture = ExtResource("4_dw050")
hframes = 9

[node name="JumpSprite2D" type="Sprite2D" parent="."]
position = Vector2(0.176108, 0)
scale = Vector2(0.482389, 0.361842)
texture = ExtResource("5_sweqy")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_urp6f")
}
